added some unit tests and pushed coverage to 10%